Opened 12 years ago

Closed 12 years ago

Last modified 12 years ago

#3311 closed defect (fixed)

av_find_best_stream returns an invalid audio stream

Reported by: hxuanyu Owned by:
Priority: normal Component: avformat
Version: git-master Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

In the attached file there are 2 audio streams

Stream #0:0[0x200]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p(tv), 720x480 [SAR 32:27 DAR 16:9], max. 9000 kb/s, 29.97 fps, 29.97 tbr, 90k tbn, 59.94 tbc
Stream #0:1[0x201]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p(tv, bt709), 352x240 [SAR 40:33 DAR 16:9], max. 300 kb/s, 29.97 fps, 29.97 tbr, 90k tbn, 59.94 tbc
Stream #0:2[0x210]: Audio: aac ([15][0][0][0] / 0x000F), 0 channels, fltp, 149 kb/s
Stream #0:3[0x212]: Audio: aac ([15][0][0][0] / 0x000F), 48000 Hz, mono, fltp, 75 kb/s
Stream #0:4[0x230]: Unknown: none ([6][0][0][0] / 0x0006)
Stream #0:5[0x140]: Unknown: none ([13][0][0][0] / 0x000D)
Stream #0:6[0x158]: Unknown: none ([13][0][0][0] / 0x000D)

but av_find_best_stream returns #0:2 which outputs just silence (because of 0 channel?) instead of the valid stream #0:3.

This can be reproduce by playing the file with ffplay.

Attachments (1)

ticket3311.ts (2.4 MB ) - added by Carl Eugen Hoyos 12 years ago.

Change History (7)

comment:2 by Carl Eugen Hoyos, 12 years ago

Please add your failing ffplay command line together with the complete, uncut console output to make this a valid ticket.

Last edited 12 years ago by Carl Eugen Hoyos (previous) (diff)

by Carl Eugen Hoyos, 12 years ago

Attachment: ticket3311.ts added

comment:3 by hxuanyu, 12 years ago

$ ffplay.exe -loglevel debug aavv_mpeg2video_30_yuv420p_dar16x9_sar40x33_aac_48000_1_0.ts
ffplay version N-58485-ga12b4bd Copyright (c) 2003-2013 the FFmpeg developers
  built on Nov 26 2013 22:01:46 with gcc 4.8.2 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-avisynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetype --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libx264 --enable-libxavs --enable-libxvid --enable-zlib
  libavutil      52. 55.100 / 52. 55.100
  libavcodec     55. 44.100 / 55. 44.100
  libavformat    55. 21.102 / 55. 21.102
  libavdevice    55.  5.101 / 55.  5.101
  libavfilter     3. 91.100 /  3. 91.100
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 17.104 /  0. 17.104
  libpostproc    52.  3.100 / 52.  3.100
[mpegts @ 025a3d60] Format mpegts probed with size=2048 and score=100
[mpegts @ 025a3d60] stream=0 stream_type=2 pid=200 prog_reg_desc=
[mpegts @ 025a3d60] stream=1 stream_type=2 pid=201 prog_reg_desc=
[mpegts @ 025a3d60] stream=2 stream_type=f pid=210 prog_reg_desc=
[mpegts @ 025a3d60] stream=3 stream_type=f pid=212 prog_reg_desc=
[mpegts @ 025a3d60] stream=4 stream_type=6 pid=230 prog_reg_desc=
[mpegts @ 025a3d60] stream=5 stream_type=d pid=140 prog_reg_desc=
[mpegts @ 025a3d60] stream=6 stream_type=d pid=158 prog_reg_desc=
[mpegts @ 025a3d60] File position before avformat_find_stream_info() is 0
[mpegts @ 025a3d60] parser not found for codec none, packets or times may be invalid.
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 1 times
[mpeg2video @ 025a4d00] Invalid frame dimensions 0x0.
[mpeg2video @ 025a44a0] Invalid frame dimensions 0x0.
[aac @ 025a5520] get_buffer() failed
    Last message repeated 2 times
[aac @ 025a6d40] get_buffer() failed
[mpeg2video @ 025a4d00] Invalid frame dimensions 0x0.
    Last message repeated 1 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 2 times
[mpeg2video @ 025a4d00] Invalid frame dimensions 0x0.
[aac @ 025a5520] get_buffer() failed
    Last message repeated 1 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980357976 (pts 2980357976, duration 1920) in the queue
    Last message repeated 2 times
[mpegts @ 025a3d60] Non-increasing DTS in stream 3: packet 4 with DTS 2980357976, packet 5 with DTS 2980357976
[aac @ 025a5520] get_buffer() failed
[mpeg2video @ 025a44a0] Invalid frame dimensions 0x0.
[aac @ 025a5520] get_buffer() failed
    Last message repeated 2 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980363736 (pts 2980363736, duration 1920) in the queue
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980373336 (pts 2980373336, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 1 times
[mpeg2video @ 025a4d00] Invalid frame dimensions 0x0.
[aac @ 025a5520] get_buffer() failed
    Last message repeated 1 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980381016 (pts 2980381016, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980388696 (pts 2980388696, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980396376 (pts 2980396376, duration 1920) in the queue
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980405976 (pts 2980405976, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980413656 (pts 2980413656, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980421336 (pts 2980421336, duration 1920) in the queue
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 1 times
[mpegts @ 025a3d60] probing stream 4 pp:2500
[mpegts @ 025a3d60] probing stream 4 pp:2499
[mpegts @ 025a3d60] probing stream 4 pp:2498
[mpegts @ 025a3d60] probed stream 4 failed
[mpegts @ 025a3d60] parser not found for codec none, packets or times may be invalid.
[aac @ 025a5520] get_buffer() failed
    Last message repeated 1 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980430936 (pts 2980430936, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980438616 (pts 2980438616, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980446296 (pts 2980446296, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 2 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980453976 (pts 2980453976, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980461656 (pts 2980461656, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980469336 (pts 2980469336, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980477016 (pts 2980477016, duration 1920) in the queue
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980486616 (pts 2980486616, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980494296 (pts 2980494296, duration 1920) in the queue
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980503896 (pts 2980503896, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980511576 (pts 2980511576, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980519256 (pts 2980519256, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980526936 (pts 2980526936, duration 1920) in the queue
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980536536 (pts 2980536536, duration 1920) in the queue
    Last message repeated 1 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980542296 (pts 2980542296, duration 1920) in the queue
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 2 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980551896 (pts 2980551896, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failedKB vq=    0KB sq=    0B f=0/0
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980559576 (pts 2980559576, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980567256 (pts 2980567256, duration 1920) in the queue
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 2 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980576856 (pts 2980576856, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980584536 (pts 2980584536, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980592216 (pts 2980592216, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980599896 (pts 2980599896, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980607576 (pts 2980607576, duration 1920) in the queue
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 2 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980617176 (pts 2980617176, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 5 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980624856 (pts 2980624856, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 2 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980632536 (pts 2980632536, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980640216 (pts 2980640216, duration 1920) in the queue
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980649816 (pts 2980649816, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980657496 (pts 2980657496, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980665176 (pts 2980665176, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980672856 (pts 2980672856, duration 1920) in the queue
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980682456 (pts 2980682456, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980690136 (pts 2980690136, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980697816 (pts 2980697816, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980705496 (pts 2980705496, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980713176 (pts 2980713176, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980720856 (pts 2980720856, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980728536 (pts 2980728536, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980736216 (pts 2980736216, duration 1920) in the queue
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980745816 (pts 2980745816, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 2 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980753496 (pts 2980753496, duration 1920) in the queue
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980763096 (pts 2980763096, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980770776 (pts 2980770776, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 4 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980778456 (pts 2980778456, duration 1920) in the queue
    Last message repeated 2 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 3 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980786136 (pts 2980786136, duration 1920) in the queue
    Last message repeated 3 times
[aac @ 025a5520] get_buffer() failed
    Last message repeated 2 times
[mpegts @ 025a3d60] first_dts 2980350296 not matching first dts 2980795736 (pts 2980795736, duration 1920) in the queue
    Last message repeated 2 times
[mpegts @ 025a3d60] max_analyze_duration 5000000 reached at 5013333 microseconds
[mpegts @ 025a3d60] decoding for stream 2 failed
[NULL @ 025a7d80] start time is not set in estimate_timings_from_pts
[NULL @ 025a85a0] start time is not set in estimate_timings_from_pts
[mpegts @ 025a3d60] PES packet size mismatch
    Last message repeated 1 times
[mpegts @ 025a3d60] Could not find codec parameters for stream 2 (Audio: aac ([15][0][0][0] / 0x000F), 0 channels, fltp, 149 kb/s): unspecified sample rate
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 025a3d60] Could not find codec parameters for stream 4 (Unknown: none ([6][0][0][0] / 0x0006)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 025a3d60] Could not find codec parameters for stream 5 (Unknown: none ([13][0][0][0] / 0x000D)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 025a3d60] Could not find codec parameters for stream 6 (Unknown: none ([13][0][0][0] / 0x000D)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 025a3d60] File position after avformat_find_stream_info() is 0
Input #0, mpegts, from 'aavv_mpeg2video_30_yuv420p_dar16x9_sar40x33_aac_48000_1_0.ts':
  Duration: 00:00:15.64, start: 33114.702544, bitrate: 6486 kb/s
  Program 102
    Stream #0:0[0x200], 150, 1/90000: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p(tv), 720x480 [SAR 32:27 DAR 16:9], 1001/60000, max. 9000 kb/s, 29.97 fps, 29.97 tbr, 90k tbn, 59.94 tbc
    Stream #0:1[0x201], 151, 1/90000: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p(tv, bt709), 352x240 [SAR 40:33 DAR 16:9], 1001/60000, max. 300 kb/s, 29.97 fps, 29.97 tbr, 90k tbn, 59.94 tbc
    Stream #0:2[0x210], 237, 1/90000: Audio: aac ([15][0][0][0] / 0x000F), 0 channels, fltp, 149 kb/s
    Stream #0:3[0x212], 237, 1/90000: Audio: aac ([15][0][0][0] / 0x000F), 48000 Hz, mono, fltp, 75 kb/s
    Stream #0:4[0x230], 3, 1/90000: Unknown: none ([6][0][0][0] / 0x0006)
    Stream #0:5[0x140], 0, 1/90000: Unknown: none ([13][0][0][0] / 0x000D)
    Stream #0:6[0x158], 0, 1/90000: Unknown: none ([13][0][0][0] / 0x000D)
detected 4 logical cores
[ffplay_abuffer @ 02669e00] Setting 'sample_rate' to value '0'
[ffplay_abuffer @ 02669e00] Setting 'sample_fmt' to value 'fltp'
[ffplay_abuffer @ 02669e00] Setting 'channels' to value '0'
[ffplay_abuffer @ 02669e00] Setting 'time_base' to value '1/0'
[abuffer @ 025a1b60] Value inf for parameter 'time_base' out of range [0 - 2.14748e+009]
    Last message repeated 1 times
[abuffer @ 025a1b60] Error setting option time_base to value 1/0.
[ffplay_abuffer @ 02669e00] Error applying options to the filter.
Video frame changed from size:0x0 format:none serial:-1 to size:352x240 format:yuv420p serial:1
[ffplay_buffer @ 0266ff60] Setting 'video_size' to value '352x240'
[ffplay_buffer @ 0266ff60] Setting 'pix_fmt' to value '0'
[ffplay_buffer @ 0266ff60] Setting 'time_base' to value '1/90000'
[ffplay_buffer @ 0266ff60] Setting 'pixel_aspect' to value '40/33'
[ffplay_buffer @ 0266ff60] Setting 'frame_rate' to value '30000/1001'
[ffplay_buffer @ 0266ff60] w:352 h:240 pixfmt:yuv420p tb:1/90000 fr:30000/1001 sar:40/33 sws_param:
[ffplay_crop @ 0405dd20] Setting 'out_w' to value 'floor(in_w/2)*2'
[ffplay_crop @ 0405dd20] Setting 'out_h' to value 'floor(in_h/2)*2'
[AVFilterGraph @ 0429bf80] query_formats: 3 queried, 2 merged, 0 already done, 0 delayed
[ffplay_crop @ 0405dd20] w:352 h:240 sar:40/33 -> w:352 h:240 sar:40/33
33117.86 M-V: -0.013 fd=   0 aq=    0KB vq=    5KB sq=    0B f=0/0
[AVIOContext @ 025a39a0] Statistics: 7852176 bytes read, 3 seeks/0
Last edited 12 years ago by Carl Eugen Hoyos (previous) (diff)

comment:4 by Carl Eugen Hoyos, 12 years ago

Component: undeterminedavformat
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Patch sent.

comment:5 by Carl Eugen Hoyos, 12 years ago

Resolution: fixed
Status: openclosed

Should be fixed in cb36e441 -thank you for the report and the sample!

in reply to:  description comment:6 by Carl Eugen Hoyos, 12 years ago

Replying to hxuanyu:

Stream #0:2[0x210]: Audio: aac ([15][0][0][0] / 0x000F), 0 channels, fltp, 149 kb/s

I opened ticket #3312 for this regression, fixed by Michael.

Note: See TracTickets for help on using tickets.