Never favour an audio stream with 0 channels in av_find_best_stream().

Fixes ticket #3311.